--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,8 @@ dependencies {
     compile wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
-    testCompile 'junit:junit:4.12'
+    
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
