--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "edu.wpi.first.GradleRIO" version "2019.3.1"
 }
 
-def ROBOT_MAIN_CLASS = "edu.greenblitz.robotname.Main"
+def ROBOT_MAIN_CLASS = "edu.greenblitz.robotname.Robot"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
