--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-    implementation 'com.github.GreenBlitz.MotionControl:motion:master-SNAPSHOT'
+    compile 'com.github.GreenBlitz.MotionControl:motion:master-SNAPSHOT'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
 }
 
