--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 
     compile 'com.github.GreenBlitz.MotionControl:motion:master-SNAPSHOT'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
+
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
