--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,5 @@
-#Fri Mar 01 23:48:24 IST 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=permwrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
-zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.0-all.zip
+zipStorePath=permwrapper/dists
