--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-    compile 'com.github.GreenBlitz.MotionControl:motion:fd134642b718f97fbab5478f3dc81179da6e0be4'
+    compile 'com.github.GreenBlitz:GBLib:2d2691c883d5106125c124c45c7d2a8187e75dae'
+    compile 'com.github.GreenBlitz.MotionControl:motion:b1969b2f577e8ffb22e4917aebfc840b64ec9f8d'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
